# PyInies

./: .gitignore  Dockerfile  PyInies.spec  README.md  pyproject.toml  requirements.txt
pyinies/: client.py  models.py  process.py  script.py
src/: 2024-12-20-export_inies.xlsx  client.py  export_inies.xlsx  process.py  sandbox.ipynb  script.py
